# YouTube-Comment-Sentiment-Analysis

./: README.md  main.py  pyproject.toml  requirements.txt
Notebooks/: baseline_model.ipynb  data_preprocessing.ipynb
